@@ -21,6 +21,7 @@
 
 === Bug fixes ===
  * #979 (Viewer does not handle BarPlot's fillStyle)
+ * #977 (HypothesisTest::ChiSquared is bogus)
 
 == 1.12 release (2018-11-08) == #release-1.12
 
